--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "fs": "0.0.1-security",
+    "http": "0.0.0",
     "jquery": "^3.3.1",
     "query-string": "^6.2.0",
     "request": "^2.88.0",
